# AstroBox-NG-Plugin-InAppBrowser

./: .gitignore  Cargo.toml
ios/: Package.resolved  Package.swift
ios/Sources/: InappbrowserPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: error.rs  lib.rs  mobile.rs  models.rs  stub.rs
