[package]
name = "inappbrowser"
version = "0.1.0"
description = "In-app browser (SFSafariViewController) plugin for in-app OAuth login (iOS only)"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "inappbrowser"

[dependencies]
tauri = { version = "2.11.3", features = ["rustls-tls"] }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.6.3", features = ["build"] }
